Fixed overflow-wrap: break-word in the posts scss file

--- a/scss/internal/homepage/sections/_posts.scss
+++ b/scss/internal/homepage/sections/_posts.scss
@@ -9,6 +9,9 @@
   a {
     text-decoration: none;
   }
+  p {
+    overflow-wrap: break-word;
+  }
 }
 .recent-posts-list h4 {
   margin-top: 8vh;
